--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.7.3"
+  },
+  "dependencies": {
+    "ngx-lazy-loading-images": "0.0.1"
   }
 }
